<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent">

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:orientation="vertical">

		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/ambient_data"
			android:gravity="center_vertical|center_horizontal" android:textSize="36dip">
		</TextView>

		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/temperature">
		</TextView>
		<Spinner android:id="@+id/temperatureSpinner"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:prompt="@string/temperature" />

		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/humidity">
		</TextView>
		<Spinner android:id="@+id/humiditySpinner"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:prompt="@string/humidity" />

		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/soil">
		</TextView>
		<Spinner android:id="@+id/soilSpinner" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:prompt="@string/soil" />

		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/places">
		</TextView>

		<Spinner android:id="@+id/placesSpinner" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:prompt="@string/places" />
	</LinearLayout>
</ScrollView>